--- a/DATN_F21/src/main/resources/templates/viewsUser/myAccount/add_address.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/myAccount/add_address.html
@@ -6,7 +6,7 @@
         <div class="tab-pane fade active show" ng-controller="buyer-ctrl">
             <div class="ltn__myaccount-tab-content-inner">
                 <div class="ltn__form-box">
-                    <form action="#" name="add_address" novalidate>
+                    <form name="add_address" novalidate>
                         <fieldset>
                             <legend>Địa Chỉ</legend>
                             <div class="row">
@@ -43,7 +43,7 @@
                                 </div>
                             </div>
                             <div class="btn-wrapper text-center">
-                                <button class="btn bg-primary" type="submit" ng-click="addaddress()">Lưu địa chỉ</button>
+                                <button class="btn bg-primary" ng-click="add_address1()">Lưu địa chỉ</button>
                             </div>
                     </form>
                     </fieldset>
