--- a/DATN_F21/src/main/resources/templates/viewsSeller/detail.html
+++ b/DATN_F21/src/main/resources/templates/viewsSeller/detail.html
@@ -37,7 +37,10 @@
                 </div>
             </div>
             <div class="diachi">
-                <label for=""><b>Địa chỉ nhận: </b><b>Tên người nhận: </b> [[*{address.fullname}]], <b>Số điện thoại: </b>[[*{address.phone}]], <b>Địa chỉ:</b>[[*{address.address}]]</label>
+                <label for=""><b>Địa chỉ nhận: </b> <br>
+                    Tên người nhận: [[*{address.fullname}]] <br>
+                    Số điện thoại: [[*{address.phone}]] <br>
+                    Địa chỉ:[[*{address.address}]]</label>
             </div>
         </div>
        
