--- a/DATN_F21/src/main/resources/templates/viewsUser/myAccount/orderdetail.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/myAccount/orderdetail.html
@@ -11,7 +11,7 @@
 		                    <tr>
 		                        <th>Ảnh</th>
 		                        <th>Tên sản phẩm</th>
-		                        <th>giá</th>
+		                        <th>Giá</th>
 		                        <th>Số lượng</th>
 		                        <th>Tổng cộng</th>
 		                    </tr>
