--- a/DATN_F21/src/main/resources/templates/viewsUser/myAccount/transaction.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/myAccount/transaction.html
@@ -36,7 +36,7 @@
 												</td>
 												<td>
 													<div class="row">
-														<div class="col-lg-12"><h4>{{item.money | number:2}} VND</h4></div>
+														<div class="col-lg-12"><h4>{{item.money>0?'+':''}}{{item.money | number:2}} VND</h4></div>
 														<div class="col-lg-12"><p>{{item.status?'Hoàn tất':'Chưa hoàn tất'}}</p></div>
 													</div>	
 												</td>											
