--- a/DATN_F21/src/main/resources/templates/viewsSeller/confirmed.html
+++ b/DATN_F21/src/main/resources/templates/viewsSeller/confirmed.html
@@ -6,7 +6,7 @@
 	<div class="xacnhan" style="text-align: center;">
 	<label class="title3" style="color: orange; margin-top: 20px; font-size: 30px">Đơn Hàng Đã Xác Nhận</label>
             
-            <div class="bang2">
+    <div class="bang2" style="height: 600px; overflow: auto;">
                 <table class="table tablea">
                     <thead class="thead-light">
                         <tr>
