--- a/DATN_F21/src/main/resources/templates/viewsSeller/wait.html
+++ b/DATN_F21/src/main/resources/templates/viewsSeller/wait.html
@@ -25,7 +25,7 @@
             </div>
           </div>
         </div>
-        <div class="bang2">
+        <div class="bang2" style="height: 600px; overflow: auto;">
           <table class="table tablea">
             <thead class="thead-light">
               <tr>
