--- a/DATN_F21/src/main/resources/templates/viewsUser/myAccount/order.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/myAccount/order.html
@@ -5,7 +5,7 @@
 	<main>	
 	<div class="tab-pane fade active show">
 		    <div class="ltn__myaccount-tab-content-inner">
-		        <div class="">
+		        <div class="" style="height: 600px; overflow: auto;">
 		            <table class="table">
 		                <thead>
 		                    <tr>
