--- a/DATN_F21/src/main/resources/templates/viewsUser/login.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/login.html
@@ -28,7 +28,7 @@
 								</div>
 									
 								<div class="go-to-btn mt--50">
-									<a href="/fogot_password"><small>QUÊN MẬT KHẨU?</small></a>
+									<a href="/forgot_password"><small>QUÊN MẬT KHẨU?</small></a>
 								</div>
 								<spam th:text="${message}"></spam>
 								<div class="btn-wrapper mt-20">
