--- a/DATN_F21/src/main/resources/templates/viewsUser/reset_password_form.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/reset_password_form.html
@@ -44,7 +44,7 @@
 				</div>
 			</div>
 		</div>
-		<script type="text/javascript">
+		<!-- <script type="text/javascript">
 			function checkPasswordMatch(fieldConfirmPassword) {
 				if (fieldConfirmPassword.value != $("#password").val()) {
 					fieldConfirmPassword.setCustomValidity("Passwords do not match!");
@@ -53,7 +53,7 @@
 					fieldConfirmPassword.setCustomValidity("");
 				}
 			}
-		</script>
+		</script> -->
 	</main>
 </body>
 
