--- a/DATN_F21/src/main/resources/templates/viewsUser/reset_password_form.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/reset_password_form.html
@@ -1,50 +1,71 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	th:replace="~{/layoutUser/index :: dynamic(~{:: main})}">
-
-<body ng-app="buyer-app"
-	style="background: linear-gradient(to bottom, #beedff, white);">
-	<main ng-controller="buyer-ctrl">
-		<div class="ltn__login-area pb-65 mt-40">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-6">
-						<div class="text-center">
-							<img src="/img/banner/12.png" alt="404" />
-						</div>
-					</div>
-					<div class="col-lg-6">
-						<div class="account-login-inner">
-							<h1 class="section-title text-center">
-								Reset Your Password <br />
-							</h1>
-							<form th:action="@{/reset_pass}" method="post"
-								class="ltn__form-box contact-form-box" name="forgot" novalidate>
-								<div th:if="${error != null}">
-									<p class="text-danger">[[${error}]]</p>
-								</div>
-								<div th:if="${message != null}">
-									<p class="text-warning">[[${message}]]</p>
-									<label style="color: red;" id="ms"></label>
-								</div>
-								<input type="hidden" name="token" th:value="${token}" /> <input
-									type="password" name="password" id="password"
-									class="form-control" placeholder="Enter your new password"
-									required autofocus /> <input type="password"
-									name="confirmpassword" id="confirmpassword"
-									class="form-control" placeholder="Confirm your new password"
-									required oninput="checkPasswordMatch(this);" />
-								<div class="btn-wrapper text-center">
-									<button class="theme-btn-1 btn reverse-color" type="submit">
-										Change Password</button>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- <script type="text/javascript">
+<html
+  xmlns:th="http://www.thymeleaf.org"
+  th:replace="~{/layoutUser/index :: dynamic(~{:: main})}"
+>
+  <body
+    ng-app="buyer-app"
+    style="background: linear-gradient(to bottom, #beedff, white)"
+  >
+    <main ng-controller="buyer-ctrl">
+      <div class="ltn__login-area pb-65 mt-40">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="text-center">
+                <img src="/img/banner/12.png" alt="404" />
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="account-login-inner">
+                <h1 class="section-title text-center">
+                  Đặt lại mật khẩu <br />
+                </h1>
+                <form
+                  th:action="@{/reset_pass}"
+                  method="post"
+                  class="ltn__form-box contact-form-box"
+                  name="forgot"
+                  novalidate
+                >
+                  <div th:if="${error != null}">
+                    <p class="text-danger">[[${error}]]</p>
+                  </div>
+                  <div th:if="${message != null}">
+                    <p class="text-warning">[[${message}]]</p>
+                    <label style="color: red" id="ms"></label>
+                  </div>
+                  <input type="hidden" name="token" th:value="${token}" />
+                  <input
+                    type="password"
+                    name="password"
+                    id="password"
+                    class="form-control"
+                    placeholder="Enter your new password"
+                    required
+                    autofocus
+                  />
+                  <input
+                    type="password"
+                    name="confirmpassword"
+                    id="confirmpassword"
+                    class="form-control"
+                    placeholder="Confirm your new password"
+                    required
+                    oninput="checkPasswordMatch(this);"
+                  />
+                  <div class="btn-wrapper text-center">
+                    <button class="theme-btn-1 btn reverse-color" type="submit">
+                      Change Password
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <script type="text/javascript">
 			function checkPasswordMatch(fieldConfirmPassword) {
 				if (fieldConfirmPassword.value != $("#password").val()) {
 					fieldConfirmPassword.setCustomValidity("Passwords do not match!");
@@ -54,7 +75,6 @@
 				}
 			}
 		</script> -->
-	</main>
-</body>
-
+    </main>
+  </body>
 </html>
